applications/mdr-demo/0.1.0/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: mdr-demo
  namespace: ${workspaceNamespace}
spec:
  ingressClassName: kommander-traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: mdr-demo
            port:
              number: 80
        path: /mdr-demo
        pathType: ImplementationSpecific
